manifests/apps/video/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video
  template:
    metadata:
      labels:
        app: video
    spec:
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
        - name: video
          image: ghcr.io/robinmordasiewicz/video:0.0.7
          ports:
          - containerPort: 8000
          resources:
            limits:
              nvidia.com/gpu: 0
---
apiVersion: v1
kind: Service
metadata:
  name: video
  namespace: application
  labels:
    app: video
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: video
  type: NodePort
