manifests/apps/video/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: video
  namespace: application
  labels:
    app: video
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: video
  type: NodePort
